adjusting text alignment to avoid over flowing from decorative borders on a range of screen sizes

--- a/src/App.css
+++ b/src/App.css
@@ -26,16 +26,21 @@ select:focus {
 
 .ListItemArticles {
   border-style: double;
-  border: 1 px;
   background-color: #fff;
   font-family: "Helvetica Neue", Helvetica, Arial, Verdana, Tahoma, Sans-serif;
   font-size: medium;
   padding: 0px;
-  margin: 0.1 rem auto;
+  max-width: 100%;
   text-align: center;
+  
   border-image: url(https://i.imgur.com/040pFDw.png) 20 / 20px round;
   list-style-type: none;
 }
+.ListItemInnerArticles{
+max-width: 85%;
+padding-left: 1rem;
+}
+
 
 .ListItemTopics {
   border-style: double;
@@ -67,3 +72,11 @@ img {
   height: auto;
   max-width: 100%;
 }
+body {
+  margin: 3px;
+  
+}
+ul{
+  padding-inline-start: 0rem;
+}
+
